--- a/AUTHORS
+++ b/AUTHORS
@@ -1,11 +1,19 @@
-icewm -- authors file.  2019-02-04
+icewm -- authors file.  2019-03-27
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Author: Stanislav Brabec <sbrabec@suse.cz>
+Author: Sven Åhr <anders.ahr@gmail.com>
+Author: Juan Sarria <juansarriam@gmail.com>
+Author: Ewelina Michalowska <ewelina.michalowska@stgambit.com>
+Author: Hwajin Kim <hwajin.kim@e4net.net>
+Author: Robert Taisz <robert.taisz@emerald.hu>
+Author: Christine Gabriel <christine@stoquart.com>
+Author: Emily Dong <Emily.Dong@excel-gits.com>
+Author: George Yacoub <george.yacoub@arabize.com>
 Author: wisememo <46960734+wisememo@users.noreply.github.com>
 Author: Sarah Kriesch <ada.lovelace@gmx.de>
 Author: Franziska Weinberger <f.weinberger@gemino.de>
 Author: Jorge Gallegos Carrasco <jcarrascochih@gmail.com>
-Author: Juan Sarria <juansarriam@gmail.com>
 Author: Patricia Pazos <pms.malaga@hermestrans.com>
 Author: openSUSE Weblate <weblate-noreply@opensuse.org>
 Author: Brian Bidulock <bidulock@openss7.org>
@@ -38,17 +46,11 @@ Author: Matthew Wong <mawong@redhat.com>
 Author: Ad Soyad <kalemlik100@yandex.com>
 Author: Jiri Bohac <jbohac@suse.cz>
 Author: ddekany <ddekany@apache.org>
-Author: Robert Taisz <robert.taisz@emerald.hu>
 Author: Grace Yu <grace.yu@excel-gits.com>
-Author: Hwajin Kim <hwajin.kim@e4net.net>
 Author: Mindaugas Baranauskas <opensuse.lietuviu.kalba@gmail.com>
 Author: Anshul Panwar <caspian7pena@gmail.com>
-Author: Ewelina Michalowska <ewelina.michalowska@stgambit.com>
 Author: Martin Devenney <devenneymartin@gmail.com>
 Author: Nikita Maynagashev <maynagashev@palex.ru>
-Author: Christine Gabriel <christine@stoquart.com>
-Author: Emily Dong <Emily.Dong@excel-gits.com>
-Author: George Yacoub <george.yacoub@arabize.com>
 Author: Andriy Bandura <andriykopanytsia@gmail.com>
 Author: Davide Aiello <davidea@novilinguists.com>
 Author: G. Allen Morris III <gam3@gam3.net>
